gccida/c2/fatal_io_error
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1440:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v9; // rdi 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1441:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v10; // rax 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1454:17: error: expected expression
v3 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1454:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1455:17: error: expected expression
v4 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1455:9: error: use of undeclared identifier '_OWORD'
v4 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1456:17: error: expected expression
v5 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1456:9: error: use of undeclared identifier '_OWORD'
v5 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1457:18: error: expected expression
v15 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1457:10: error: use of undeclared identifier '_OWORD'
v15 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1458:18: error: expected expression
v19 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1458:10: error: use of undeclared identifier '_OWORD'
v19 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1467:53: error: expected expression
diagnostic_buffer->state.format_args = ( va_list_0 *)va; 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1467:42: error: use of undeclared identifier 'va_list_0'
diagnostic_buffer->state.format_args = ( va_list_0 *)va; 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1472:12: error: expected expression
*( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4] = v19; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1472:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4] = v19; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1476:12: error: expected expression
*( _OWORD *)v10->state.diagnostic_count = v18; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1476:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v10->state.diagnostic_count = v18; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/diagnostic.c:1477:12: error: expected expression
*( _OWORD *)&v10->state.cursor = v13; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fatal_io_error/src/obj/diagnostic.o] Error 1
